fix(handler): export structures in swagger annotations
